// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawingCanvas click_and_drag 1`] = `
<canvas
  data-snapshot-image="3f70bed6b2b659c6a38c93cf51e6b6774fbd642e7703650bf168a807d2ddf3183efd0d9a726e96b0821170289279ed96c9c88fe8ef8774f36ff6dfe8d1929169"
  data-testid="mousecanvas"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;

exports[`drawingCanvas mousemove_multiple 1`] = `
<canvas
  data-snapshot-image="80fd0c31d539a3a888166b4b1886dc6aae048e06091a055187b90b879f77091d063eed75cf1af5855023804dbd20fc1f91a1087c73295178f42345c436edb1b4"
  data-testid="mousecanvas"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;

exports[`drawingCanvas mousemove_singular 1`] = `
<canvas
  data-snapshot-image="61dfe89fd77165441639f9b2eebad48b3f542ce1fa7ff569b7811bdd3c9f708bcd3f8c5f61b8fce3c553b202827e3004fae2d2aeb35b49c2fe0886a0122cc942"
  data-testid="mousecanvas"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;
